# RBF_MAX

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  COMMIT_CONVENTION.md  DEVLOG.md  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: .gitkeep  CMakeLists.txt  bench_kernel.cpp  bench_predict.cpp  bench_solver.cpp  common.hpp
cmake/: CompilerFlags.cmake  FetchDependencies.cmake  FindMaya.cmake  MayaVersionMatrix.cmake
docs/: math_derivation.md  schema_v1.md
docs/guides/: install.md
docs/prompts/: phase2a5_master_prompt.md
docs/spec/: math_derivation.md
installer/: README.md  drag_drop_install.py  package.py
kernel/include/rbfmax/: distance.hpp  feature_spec.hpp  interpolator.hpp  io_json.hpp  kdtree.hpp  kernel_functions.hpp  quaternion.hpp  solver.hpp  types.hpp
kernel/src/: interpolator.cpp  io_json.cpp  solver.cpp
maya_node/: CMakeLists.txt  README.md
maya_node/include/rbfmax/maya/: adapter_core.hpp  color_mapping.hpp  draw_sink.hpp  mrbf_draw_override.hpp  mrbf_node.hpp  mrbf_shape.hpp  plugin_info.hpp.in  rbfmax_train_cmd.hpp
maya_node/src/: adapter_core_csv.cpp  color_mapping.cpp  draw_sink_core.cpp  mrbf_draw_override.cpp  mrbf_node.cpp  mrbf_shape.cpp  plugin_main.cpp  rbfmax_train_cmd.cpp
maya_node/tests/: CMakeLists.txt  test_adapter_core.cpp  test_color_mapping.cpp  test_draw_sink.cpp
maya_node/tests/smoke/: smoke_hellonode.py  smoke_predict.py  smoke_train.py  smoke_viewport.py
maya_node/tests/smoke/fixtures/: tiny_rbf.json  tiny_rbf_expected.json  tiny_train_centers.csv  tiny_train_targets.csv
scripts/: .gitkeep
tests/: CMakeLists.txt  test_distance.cpp  test_feature_spec.cpp  test_interpolator.cpp  test_io_json.cpp  test_kdtree.cpp  test_kernel_functions.cpp  test_quaternion.cpp  test_solver.cpp
tests/fixtures/: cmt_parity_17A_hybrid.json  cmt_parity_17A_quat_only_full.json
